Tidy up the columnar payload readers and tests
Share the payload cross-check: assertColumnarPayload was private
to AbstractBinaryDocValuesQuery while the contains-term and length
queries, both in that package, spelled the same assert out again.

Take the .counts skipper lookup in ScanningBinaryDocValuesTermQuery
inside the branch that can use it. A payload is never a bare term,
so the format check now guards the lookup rather than sitting
beside it as a conjunct.

Clear the columnar sort field's cached key on every exit that
reports no value, so a caller cannot read the previous document's
key back from binaryValue(). Folding nextDoc and advance into one
skip loop is what makes that one place rather than three.

Say what the codec attribute is actually for. It reads as though
ColumnarFieldType.fromField resolves the column through it, but
PerFieldFormatSupplier builds the codec with a constant selector,
so nothing consults it on the write side; it is the reader-side
marker. Also record why the type is not deduplicated, since
FieldType#equals ignores attributes and would collapse it.

Stop the two differential codec tests passing vacuously: neither
checked that the index they compare against actually reached the
codec, so both would have agreed if neither did. The helper now
takes an index name, and there is a negative form for the arm that
must not use it. The array-order expectations are written out
beside their input rather than re-derived by splitting the JSON on
commas.

Two things left as TODOs rather than done here, both more than a
tidy-up: the block-loader read() walks the payload twice where the
inline-null reader buffers offsets in one pass, and the field
allocates per document where ArrayOrderInlineNull holds a lone
slot in a field.